Finished lesson "ExchangeAGram: Finishing UIAlertController"

--- a/ExchangeAGram/Base.lproj/Main.storyboard
+++ b/ExchangeAGram/Base.lproj/Main.storyboard
@@ -59,7 +59,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="SSy-5F-Bxe">
-                        <barButtonItem key="leftBarButtonItem" title="Profile" id="yc8-wM-G43"/>
+                        <barButtonItem key="leftBarButtonItem" title="Profile" id="yc8-wM-G43">
+                            <connections>
+                                <action selector="profileTapped:" destination="BYZ-38-t0r" id="6iI-A6-Qtg"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="camera" id="eLr-bg-ive">
                             <connections>
                                 <action selector="snapBarButtonItemTapped:" destination="BYZ-38-t0r" id="XYZ-ZK-3rY"/>
@@ -73,7 +77,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1425" y="453"/>
+            <point key="canvasLocation" x="1480" y="453"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="qyy-Eh-Ca7">
@@ -87,19 +91,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Tr-GV-eI8">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Tr-GV-eI8">
                                 <rect key="frame" x="16" y="72" width="100" height="100"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mf-N3-1GH">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mf-N3-1GH">
                                 <rect key="frame" x="124" y="111" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qVp-aD-qqM" customClass="FBLoginView">
+                                <rect key="frame" x="16" y="246" width="200" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="fbLoginView" destination="qVp-aD-qqM" id="f4D-ny-2yV"/>
                         <outlet property="nameLabel" destination="0mf-N3-1GH" id="has-cs-zCx"/>
                         <outlet property="profileImageView" destination="1Tr-GV-eI8" id="0Dg-uo-aHD"/>
                     </connections>
